--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "license": "ISC",
     "dependencies": {
         "ejs": "^3.1.9",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "mongodb": "^6.3.0",
+        "mongoose": "^8.1.0"
     }
 }
